settings memorized between sessions, custon soundfont support, listing preset names, added some controls

--- a/Lumatone/Base.lproj/LaunchScreen.storyboard
+++ b/Lumatone/Base.lproj/LaunchScreen.storyboard
@@ -16,9 +16,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="1080" height="810"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="eLumatone" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z93-gG-9wj">
-                                <rect key="frame" x="405" y="372" width="271" height="67"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Isometric Keyboard" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z93-gG-9wj">
+                                <rect key="frame" x="301" y="371.5" width="478" height="67"/>
                                 <fontDescription key="fontDescription" name="Optima-Bold" family="Optima" pointSize="56"/>
                                 <color key="textColor" red="0.3447613683952338" green="0.75917030230027649" blue="0.76858064317211661" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
@@ -26,6 +25,10 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Z93-gG-9wj" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="DSY-s2-MSg"/>
+                            <constraint firstItem="Z93-gG-9wj" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="ssD-ne-mJb"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
